fix: layout bugs

--- a/client/src/components/UI/filterBarMenu/FilterBarMenu.scss
+++ b/client/src/components/UI/filterBarMenu/FilterBarMenu.scss
@@ -1,9 +1,3 @@
-.menu__wrapper {
-  //   width: 100%;
-  //   height: 40px;
-  margin-bottom: 10px;
-}
-
 .menu__content {
   display: flex;
   flex-wrap: wrap;
