--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -116,6 +116,10 @@
   }
 }
 
+.card-col {
+  border: 1px solid teal;
+}
+
 // .product {
 //   width: 382px;
 //   border: 1px solid #d9d9d9;
